Closed Bug 487552 Opened 16 years ago Closed 16 years ago

When video resumes from buffering state the audio is out of sync

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: cajbir, Assigned: cajbir)

Details

(Keywords: verified1.9.1)

Attachments

(1 file)

When a video starts buffering due to needing more data the audio goes out of sync when the buffering completes. This is due to the audio stream not being paused when buffering starts which results in the timing for synchronisation being wrong. Steps to Reproduce: 1) Play a video 2) throttle bandwidth to force buffering in some manner 3) When buffering completes note out of sync audio
Testcase from my slowsend script: http://dolske.net/mozilla/tests/video/slowsend.php?stallat=1000000&stallfor=5&rate=999 Stalls ~10 seconds into the video, when it resumes it plays a bunch of frames at high-speed and then the audio is out of sync.
Great, thanks. I noticed it watching icecast streams. I have a fix. Getting it ready now.
Attached patch FixSplinter Review
Assignee: nobody → chris.double
Status: NEW → ASSIGNED
Attachment #371795 - Flags: superreview?(roc)
Attachment #371795 - Flags: review?(roc)
Flags: blocking1.9.1?
Attachment #371795 - Flags: superreview?(roc)
Attachment #371795 - Flags: superreview+
Attachment #371795 - Flags: review?(roc)
Attachment #371795 - Flags: review+
Keywords: checkin-needed
Whiteboard: [needs landing]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: blocking1.9.1? → blocking1.9.1+
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
I'm still seeing the video as out-of-sync in the following build Id and steps to reproduce: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1pre) Gecko/20090601 Shiretoko/3.5pre ID:20090601044045 1. Go to the url in bug 2. While the video is loading/playing, go to www.espn.com and www.cnn.com asap. 3. Notice the audio will be out-of-sync for the rest of the video.
That's probably the Windows hardware clock issue.
Verified FIXED on latest 1.9.1 branch and trunk, and tested in b99 Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090608 Shiretoko/3.5pre Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090608 Minefield/3.6a1pre Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b99) Gecko/20090604 Firefox/3.5b99
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: