Bug 487552. Stop playback while buffering so that we don't lose audio sync. r=roc